welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: '(' expected but identifier found.
do (for n <- 1 to 5{
        ^Poucet:15: error: illegal start of simple expression
	}
        ^